# ch4-plume-synthetic-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/outputs/publication_figures/synthetic_segmentation_examples/: synthetic_example_manifest.csv
data/outputs/tables/: synthetic_inference_speed_test.csv  synthetic_inference_speed_test.json
paper/: main.tex  references.bib  supplement.tex  synthetic_method.md
paper/tables/: efficiency_table.tex  main_results_table.tex  synthetic_metric_summary.csv  synthetic_publication_benchmark_summary.csv
scripts/: acquire_s2_data.sh  benchmark_inference_speed.py  build_plume_catalog.sh  build_training_manifest.sh  evaluate_synthetic_model.py  make_beginner_guide_pdf.py  plot_synthetic_publication_figures.py  pull_s2_exports.sh  run_all.sh  run_synthetic_publication_benchmark.sh  summarize_synthetic_publication_benchmark.py  train_synthetic_model.py
src/ch4l1c/: carbon_mapper.py  cli.py  config.py  curation.py  dataset.py  emit.py  labels.py  masks.py  sentinel2.py  sentinel2_l1c.py  splits.py  train.py
tests/: test_models.py
